kubernetes/gateway/exam-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: web-gateway
spec:
  gatewayClassName: nginx-class
  listeners:
  - name: http
    protocol: HTTP
    port: 443
    hostname: gateway.web.k8s.local
