kubernetes/gateway/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shop-route
  namespace: sandbox
spec:
  parentRefs:
  - name: main-gateway
    namespace: infra
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /shop
    backendRefs:
    - name: shop-svc
      port: 80
